--- a/src/main/resources/templates/shopping_list.html
+++ b/src/main/resources/templates/shopping_list.html
@@ -23,6 +23,7 @@
                   <a class="dropdown-item" th:href="@{/admin/}+${userId}">Admin Page</a>
                   <a class="dropdown-item" th:href="@{/action/add/}+${userId}">Add</a>
                   <a class="dropdown-item" th:href="@{/action/edit/}+${userId}">Update</a>
+                  <a class="dropdown-item" th:href="@{/action/view/}+${userId}">View</a>
                   <a class="dropdown-item" th:href="@{/logout}">Logout</a>
                 </div>
             </div>
@@ -32,57 +33,35 @@
 
     <div class="row  mt-4">
         <div class="col-3"></div>
-        <div class="col-6 bg-warning fw-bold text-center pb-1 pt-1"><h4>View Items</h4></div>
+        <div class="col-6 bg-warning fw-bold text-center pb-1 pt-1"><h4>Shopping List</h4></div>
         <div class="col-3"></div>
     </div>
 
     <div class="row mt-4 pb-3 text-center">
-        <div class="col-3 text-center bg-warning custom-margins " >
-            <div>
-                <div class="mt-3 mb-3" th:each="cat: ${category}">
-                <div class="card text-center bg-black fw-bold ms-lg-4 me-lg-4">
-                    <div class="card-body">
-                        <a class="text-decoration-none"  th:href="@{/action/view/{userId}/{cid} (userId=${userId}, cid=${cat.cid})}" target="_parent">
-                            <h5 class="card-text text-white" th:text="${cat.categoryName}"></h5>
-                        </a>
+        <div class="col-3"></div>
+        <div class="col-6">
+        <form id="shoppingListForm" method="post" th:action="@{/action/getShoppingList/}+${userId}">  
+            <div class="mt-4 mb-2">
+            <ul class="form-control">
+                <li th:if=${Items} th:each="item : ${Items}" th:id="${item.id}" th:name="${item.itemName}">
+                    <div class="form-control">
+                        <input type="checkbox" th:name="itemName" th:value="${item.itemName}">
+                        <label class="form-label" th:text="${item.itemName}"></label>
+                        <input class="small" th:name="quantity" type="number" min=0 max=100 th:value="${item.quantity}">
+                        <label class="form-label"></label>
+                        <input class="small" th:name="unit" type="text" th:value="${item.measuringUnit}" disabled>
                     </div>
-                </div>
-                </div>
+                </li>
+            </ul>
             </div>
-
-            <div>
-                <div class="mb-3">
-                    <div class="card text-center bg-black fw-bold ms-lg-4 me-lg-4">
-                        <div class="card-body">
-                            <a class="text-decoration-none"  th:href="@{/action/viewAll/{userId} (userId=${userId})}" target="_parent">
-                                <h5 class="card-text text-white">View All</h5>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+            <!-- <div class="form-outline w-50 mt-2 mb-2">
+                <label for="notes">Additional Notes:</label>
+                <textarea class="form-control" id="notes" rows="3" name="notes"></textarea>
+            </div> -->
+            <div class="form-outline w-50 mt-2 mb-2">
+                <button type="submit" class="btn btn-warning mt-2">Save</button>
             </div>
-
-        </div>
-        <div  id="viewItems" class="col-8 text-center custom-margins">
-            <div id="CategoryTitle" class="text-center bg-warning fw-bold" >
-                <h5 th:if="${cName}" th:text="${cName}" class="pt-1 pb-1"></h5>
-            </div>
-            <table class="table table-hover table-striped table-sm ">
-                <thead>
-                    <tr class="fw-bold">
-                        <td>Item Name</td>
-                        <td>Quantity</td>
-                        <td>Measuring Unit</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:if="${Items}" th:each="item: ${Items}">
-                        <td th:text="${item.itemName}"></td>
-                        <td th:text="${item.quantity}"></td>
-                        <td th:text="${item.measuringUnit}"></td>
-                    </tr>
-                </tbody>
-            </table>    
+        </form>
         </div>
     </div>
 
