--- a/src/main/resources/templates/edit_items.html
+++ b/src/main/resources/templates/edit_items.html
@@ -24,6 +24,7 @@
                       </button>
                       <div class="dropdown-menu" aria-labelledby="userMenu">
                       <a class="dropdown-item" th:href="@{/admin/}+${userId}">Admin Page</a>
+                      <a class="dropdown-item" th:href="@{/index/dashboard}">Dashboard</a>
                       <a class="dropdown-item" th:href="@{/action/add/}+${userId}">Add</a>
                       <a class="dropdown-item" th:href="@{/action/view/}+${userId}">View</a>
                       <a class="dropdown-item" th:href="@{/logout}">Logout</a>
