--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
                   in</button>
               </div>
               <div class="d-flex align-items-center justify-content-center pt-1 mb-4 pb-1">
-                  <h6 th:text="${notExist}"></h6>
+                  <h6 th:if="${error}">Wrong username or password</h6>
               </div>
 
               <div class="d-flex align-items-center justify-content-center pb-4">
@@ -59,13 +59,13 @@
                   placeholder="Full Name" pattern="^[a-zA-Z ]+" minlength="3" maxlength="25" title="Valid name must contain only letters" required/>
                 <label class="form-label" for="name"></label>
               </div>
-
+              
               <div class="form-outline mb-1">
                 <input type="email" id="email" name="email" class="form-control"
                   placeholder="Email address" pattern = "^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$" title="please provide email in correct format as name@mail.com" required/>
                 <label class="form-label" for="email"></label>
               </div>
-
+              
               <div class="form-outline mb-1">
                 <input type="password" id="password" class="form-control" placeholder="password" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@$!%*?&])([a-zA-Z0-9@$!%*?&]{8,})$" title="Password should be 8 characters long and must contain 1 lowercase, 1 uppercase, 1digit and 1 special character"
                 required/>
