--- a/src/main/resources/templates/shopping_list.html
+++ b/src/main/resources/templates/shopping_list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +21,7 @@
                     Dropdown button
                   </button>
                   <div class="dropdown-menu" aria-labelledby="userMenu">
-                  <a class="dropdown-item" th:href="@{/admin/}+${userId}">Admin Page</a>
+                  <a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/}+${userId}">Admin Page</a>
                   <a class="dropdown-item" th:href="@{/index/dashboard}">Dashboard</a>
                   <a class="dropdown-item" th:href="@{/action/add/}+${userId}">Add</a>
                   <a class="dropdown-item" th:href="@{/action/edit/}+${userId}">Update</a>
