--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
                   in</button>
               </div>
               <div class="d-flex align-items-center justify-content-center pt-1 mb-4 pb-1">
-                  <h6 th:if="${error}">Wrong username or password</h6>
+                <h6 th:if="${param.error}">Please provide a valid username and password.</h6>
               </div>
 
               <div class="d-flex align-items-center justify-content-center pb-4">
