--- a/src/main/resources/templates/add_items.html
+++ b/src/main/resources/templates/add_items.html
@@ -85,9 +85,12 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
             </form>
         </div>
     </div>
+    <div class="row  mt-2">
+        <div class="bg-warning fw-bold text-center pb-1 pt-1"><h6 th:text="${msg}"></h6></div>
+    </div>
 
     <div class="row pb-3 text-center">
-        <div class="col-3 text-center bg-warning custom-margins " >
+        <div class="col-3 text-center bg-warning mt-3 " >
             <form id="form" method="post" th:action="@{/action/addCategory/}+${userId}" th:object="${addCategory}">  
                 <p class="mb-2 text-start fw-bold" th:if=${cList} >Category Name</p>
                 <select id="addCategoryName" name="addCategoryName" class="form-control mb-2 dropdown">
@@ -100,25 +103,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
         </div>
     </div>    
 
-    <div class="row text-center bg-warning mb-3">
-        <div class="col-3"></div>
-        <div class="col-6 mt-3">
-            <table class="table table-hover table-striped table-sm ">
-                <thead class="bg-dark text-light">
-                    <tr class="fw-bold">
-                        <td>Items List with Category Name</td>
-                    </tr>
-                </thead>
-                <tbody class="bg-light">
-                    <tr th:each="m: ${msg}">
-                        <td th:text="${m}"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col3"></div>
-    </div>
-    <div class="row m-auto text-center">
+    <div class="row m-auto text-center mb-3">
         <div class="col-5"></div>
         <div class="col-2 card text-center bg-warning">
             <div class="card-body">
