--- a/src/main/resources/templates/actions.html
+++ b/src/main/resources/templates/actions.html
@@ -19,9 +19,9 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
                 <button class="btn btn-warning dropdown-toggle" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" 
                 th:text="${name}">
                     Dropdown button
-                  </button>
+                </button>
                   <div class="dropdown-menu" aria-labelledby="userMenu">
-                  <a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/}+${userId}">Admin Page</a>
+                  <a class="dropdown-item"  th:href="@{/admin/adminDashboard}">Admin Page</a>
                   <a class="dropdown-item" th:href="@{/logout}">Logout</a>
                 </div>
             </div>
@@ -36,26 +36,26 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <div class="col-1"></div>    
     <div class="col-2 card text-center bg-warning ms-3 mb-3 me-5">
         <div class="card-body">
-            <a th:href="@{/action/add/}+${userId}" target="_parent" class="text-decoration-none">
+            <a th:href="@{/action/add}" target="_parent" class="text-decoration-none">
                 <h5 class="card-text text-dark">Add/Create</h5></a>
         </div>
     </div>    
-    <!-- <div class="col-1"></div> -->
+
     <div class="col-2 card text-center bg-warning mb-3 me-5">
         <div class="card-body">
             
-            <a th:href="@{/action/edit/}+${userId}" class="text-decoration-none" target="_parent">
+            <a th:href="@{/action/edit}" class="text-decoration-none" target="_parent">
                 <h5 class="card-text text-dark">Update/Delete</h5></a>
         </div>
     </div>  
-    <!-- <div class="col-1"></div> -->
+
     <div class="col-2 card text-center bg-warning mb-3 me-5">
         <div class="card-body">
-            <a th:href="@{/action/view/}+${userId}" target="_parent" class="text-decoration-none">
+            <a th:href="@{/action/view}" target="_parent" class="text-decoration-none">
                 <h5 class="card-text text-dark">View</h5></a>
         </div>
     </div>  
-    <!-- <div class="col-1"></div> -->
+  
     <div class="col-2 card text-center bg-warning mb-3 me-5">
         <div class="card-body">
             <a th:href="@{/action/shoppingList/}+${userId}" target="_parent" class="text-decoration-none">
