--- a/src/main/resources/templates/add_items.html
+++ b/src/main/resources/templates/add_items.html
@@ -21,10 +21,10 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
                     Dropdown button
                   </button>
                   <div class="dropdown-menu" aria-labelledby="userMenu">
-                  <a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/}+${userId}">Admin Page</a>
+                  <a class="dropdown-item" th:href="@{/admin/adminDashboard}">Admin Page</a>
                   <a class="dropdown-item" th:href="@{/index/dashboard}">Dashboard</a>
-                  <a class="dropdown-item" th:href="@{/action/edit/}+${userId}">Update</a>
-                  <a class="dropdown-item" th:href="@{/action/view/}+${userId}">View</a>
+                  <a class="dropdown-item" th:href="@{/action/edit}">Update</a>
+                  <a class="dropdown-item" th:href="@{/action/view}">View</a>
                   <a class="dropdown-item" th:href="@{/logout}">Logout</a>
                 </div>
             </div>
@@ -49,7 +49,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
         <div  id="itemInputForm" class="col-8 mt-4 pt-4 custom-margins">
             <div id="CategoryTitle" class="text-center bg-warning fw-bold"></div>
-            <form id="form" method="post" th:action="@{/action/additem/}+${userId}" th:object="${newItem}">  
+            <form id="form" method="post" th:action="@{/action/additem/}" th:object="${newItem}">  
             <p class="mt-3 mb-1 text-start fw-bold">Item Name</p>
             <div class="form-outline w-75">     
                 <input id="itemName" name="itemName" type="text" placeholder="Item Name" minlength="3" maxlength="100" title="Item name cannot exceed 100 characters." class="form-control"required>
@@ -91,7 +91,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
     <div class="row pb-3 text-center">
         <div class="col-3 text-center bg-warning mt-3 " >
-            <form id="form" method="post" th:action="@{/action/addCategory/}+${userId}" th:object="${addCategory}">  
+            <form id="form" method="post" th:action="@{/action/addCategory}" th:object="${addCategory}">  
                 <p class="mb-2 text-start fw-bold" th:if=${cList} >Category Name</p>
                 <select id="addCategoryName" name="addCategoryName" class="form-control mb-2 dropdown">
                         <option th:each="cat: ${cList}" th:value=${cat.cid} th:text="${cat.categoryName}"></option>
