--- a/src/main/resources/templates/edit_items.html
+++ b/src/main/resources/templates/edit_items.html
@@ -24,10 +24,10 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
                         Dropdown button
                       </button>
                       <div class="dropdown-menu" aria-labelledby="userMenu">
-                      <a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/}+${userId}">Admin Page</a>
+                      <a class="dropdown-item" th:href="@{/admin/adminDashboard}">Admin Page</a>
                       <a class="dropdown-item" th:href="@{/index/dashboard}">Dashboard</a>
-                      <a class="dropdown-item" th:href="@{/action/add/}+${userId}">Add</a>
-                      <a class="dropdown-item" th:href="@{/action/view/}+${userId}">View</a>
+                      <a class="dropdown-item" th:href="@{/action/add}">Add</a>
+                      <a class="dropdown-item" th:href="@{/action/view}">View</a>
                       <a class="dropdown-item" th:href="@{/logout}">Logout</a>
                     </div>
                 </div>
@@ -46,7 +46,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
                     <div class="card text-center bg-black fw-bold ms-lg-4 me-lg-4">
                         <div class="card-body">
                             <a class="text-decoration-none"
-                                th:href="@{/action/edit/{userId}/{cid} (userId=${userId}, cid=${cat.cid})}"
+                                th:href="@{/action/edit/{cid} (cid=${cat.cid})}"
                                 target="_parent">
                                 <h5 class="card-text text-white" th:text="${cat.categoryName}"></h5>
                             </a>
