--- a/src/main/resources/templates/view_items.html
+++ b/src/main/resources/templates/view_items.html
@@ -21,10 +21,10 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
                     Dropdown button
                   </button>
                   <div class="dropdown-menu" aria-labelledby="userMenu">
-                  <a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/}+${userId}">Admin Page</a>
+                  <a class="dropdown-item" th:href="@{/admin/adminDashboard}">Admin Page</a>
                   <a class="dropdown-item" th:href="@{/index/dashboard}">Dashboard</a>
-                  <a class="dropdown-item" th:href="@{/action/add/}+${userId}">Add</a>
-                  <a class="dropdown-item" th:href="@{/action/edit/}+${userId}">Update</a>
+                  <a class="dropdown-item" th:href="@{/action/add}">Add</a>
+                  <a class="dropdown-item" th:href="@{/action/edit}">Update</a>
                   <a class="dropdown-item" th:href="@{/logout}">Logout</a>
                 </div>
             </div>
@@ -44,7 +44,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
                 <div class="mt-3 mb-3" th:each="cat: ${category}">
                 <div class="card text-center bg-black fw-bold ms-lg-4 me-lg-4">
                     <div class="card-body">
-                        <a class="text-decoration-none"  th:href="@{/action/view/{userId}/{cid} (userId=${userId}, cid=${cat.cid})}" target="_parent">
+                        <a class="text-decoration-none" th:href="@{/action/view/{cid} (cid=${cat.cid})}" target="_parent">
                             <h5 class="card-text text-white" th:text="${cat.categoryName}"></h5>
                         </a>
                     </div>
@@ -56,7 +56,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
                 <div class="mb-3">
                     <div class="card text-center bg-black fw-bold ms-lg-4 me-lg-4">
                         <div class="card-body">
-                            <a class="text-decoration-none"  th:href="@{/action/viewAll/{userId} (userId=${userId})}" target="_parent">
+                            <a class="text-decoration-none"  th:href="@{/action/viewAll}" target="_parent">
                                 <h5 class="card-text text-white">View All</h5>
                             </a>
                         </div>
